--- a/css/styles.css
+++ b/css/styles.css
@@ -1688,142 +1688,10 @@ section:nth-child(8)>h1{
 .contact-section>h1{
     color: #000;
     text-align: center;
-    font-family: Libre Baskerville, serif;
+    font-family: 'Catamaran';
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 0;
-}
-
-.contact-section>h4{
-    color: #162A5F;
-    font-family: Libre Baskerville, serif;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-align: center;
-}
-
-/*.contact-section>hr{*/
-/*    width: 20vw;*/
-/*    height: 0.3vh;*/
-/*    background: #FD6E0A;*/
-/*}*/
-
-.contact-section>section{
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    top: 10vh;
-}
-
-.contact-section>section>address{
-    width: 40vw;
-    height: 80vh;
-}
-
-.contact-section>section>address h4{
-    color: #162A5F;
-    font-family: Inter;
-    font-size: 1.5em;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-.contact-section>section>address a{
-    color: #494949;
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-
-.contact-section>section>address>h4{
-    margin-bottom: 0;
-}
-
-.contact-section>section>aside{
-    width: 40vw;
-    height: 80vh;
-}
-
-.contact-section>section>address>div{
-    display: flex;
-    margin-top: 2.5vh;
-}
-
-.contact-section>section>address>div:first-child{
-    margin-top: 0;
-}
-
-.contact-section>section>address>div>div:first-child{
-    width: 5vw;
-    height: 5vw;
-    position: relative;
-}
-
-.contact-section>section>address>div>div:last-child{
-    position: relative;
-    left: 5vw;
-}
-
-.contact-section>section>address>div>div:last-child>h4{
-    margin-bottom: 0;
-}
-
-.contact-section>section>address>div>div:first-child{
-    font-size: 4em;
-    color: #FD6E0A;
-}
-
-.contact-section aside>form>fieldset{
-    border: none;
-    position: absolute;
-    left: 105vh;
-}
-
-.contact-section aside>form>fieldset>input{
-    width: 38vw;
-    height: 8vh;
-    flex-shrink: 0;
-    border-radius: 20px 20px 10px 20px;
-    background: rgba(255, 178, 51, 0.37);
-    border: 0;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-}
-
-.contact-section aside>form>fieldset>textarea{
-    width: 38vw;
-    height: 15vh;
-    flex-shrink: 0;
-    border-radius: 20px 20px 10px 20px;
-    background: rgba(255, 178, 51, 0.37);
-    border: 0;
-}
-
-.contact-section aside>form>fieldset>label{
-    color: #494949;
-    font-family: Inter, sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: 62px;
-    height: 22px;
-    flex-shrink: 0;
-}
-
-.contact-section aside>form>fieldset>button{
-    width: 185px;
-    height: 47px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    background: #21609B;
-    color: white;
 }
