--- a/css/styles.css
+++ b/css/styles.css
@@ -1767,45 +1767,61 @@ section:nth-child(8)>h1{
     margin-bottom: 0;
 }
 
-.contact-section>section>address>div>div:first-child{
-    font-size: 4em;
-    color: #FD6E0A;
+.contact-section>section>address>div:nth-child(1)>div:nth-child(2)>img{
+    position: absolute;
+    top: 2vh;
+    right: 28vh;
+    width: 85%;
 }
 
+
+
+
+
+
 .contact-section aside>form>fieldset{
-    border: none;
-    position: absolute;
-    left: 110vh;
+border: none;
+position: absolute;
+left: 110vh;
 }
 
 .contact-section aside>form>fieldset>input{
-    width: 38vw;
-    height: 8vh;
-    flex-shrink: 0;
-    border-radius: 20px 20px 10px 20px;
-    background: rgba(202, 240, 248, 0.5);
-    border: 0;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+width: 38vw;
+height: 8vh;
+flex-shrink: 0;
+border-radius: 20px 20px 10px 20px;
+background: rgba(202, 240, 248, 0.5);
+border: 0;
+margin-top: 2vh;
+margin-bottom: 2vh;
 }
 
 .contact-section aside>form>fieldset>textarea{
-    width: 38vw;
-    height: 15vh;
-    flex-shrink: 0;
-    border-radius: 20px 20px 10px 20px;
-    background: rgba(202, 240, 248, 0.5);
-    border: 0;
+width: 38vw;
+height: 15vh;
+flex-shrink: 0;
+border-radius: 20px 20px 10px 20px;
+background: rgba(202, 240, 248, 0.5);
+border: 0;
 }
 
 .contact-section aside>form>fieldset>label{
-    color: #494949;
-    font-family: Inter, sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: 62px;
-    height: 22px;
-    flex-shrink: 0;
+color: #494949;
+font-family: Inter, sans-serif;
+font-size: 15px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 62px;
+height: 22px;
+flex-shrink: 0;
+}
+
+.contact-section aside>form>fieldset>button{
+width: 185px;
+height: 47px;
+flex-shrink: 0;
+border-radius: 10px;
+background: #21609B;
+color: white;
 }
