--- a/css/styles.css
+++ b/css/styles.css
@@ -129,8 +129,17 @@ body main section:first-child>div:nth-child(3)>aside>div:first-child>div{
     margin: auto;
 }
 
+.home>div:nth-child(3)>aside>div:first-child>img{
+    width: 8%;
+    position: absolute;
+    top: 29vh;
+    right: 66vh;
+}
+
 body main section:first-child>div:nth-child(3)>aside>div:first-child>p:last-child{
     color: #171212;
+    margin-top: 7vh;
+    margin-left: 4vh;
     font-family: Libre Baskerville;
     font-size: 17px;
     font-style: normal;
@@ -1008,283 +1017,6 @@ section:nth-child(5)>img:hover{
 }
 
 /*--------------------------------------expertise section-------------------------------------------------*/
-
-/*section:nth-child(6){*/
-/*    position: relative;*/
-/*    width: 65vw;*/
-/*    height: 80vw;*/
-/*    padding-left: 14vw;*/
-/*    padding-right: 14vw;*/
-/*}*/
-
-/*section:nth-child(6)>div:nth-child(1)>h1{*/
-/*    width: 17vw;*/
-/*    font-family: Inter, "Arial Black";*/
-/*    font-size: 2vw;*/
-/*    font-weight: 600;*/
-/*    color: #808080;*/
-/*    position: absolute;*/
-/*    top: 0vh;*/
-/*    left: 18vh;*/
-/*    right: 0px;*/
-/*    margin: auto;*/
-/*}*/
-
-
-/*section:nth-child(6)>div:nth-child(1)>h2{*/
-/*    width: 42vw;*/
-/*    font-family: 'Catamaran';*/
-/*    font-size: 3vw;*/
-/*    font-weight: 700;*/
-/*    color: #0A0A0A;*/
-/*    position: absolute;*/
-/*    top: 3vh;*/
-/*    right: 0;*/
-/*    left: 15vh;*/
-/*    margin: auto;*/
-/*}*/
-
-/*section:nth-child(6)>div:nth-child(1)>h3{*/
-/*    width: 63vw;*/
-/*    font-family: 'Signika';*/
-/*    font-size: 1.5vw;*/
-/*    font-weight: 700;*/
-/*    color: #0A0A0A;*/
-/*    position: absolute;*/
-/*    top: 12vh;*/
-/*    right: 0;*/
-/*    left: 25vh;*/
-/*    margin: auto;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.content-inner {*/
-/*    width:300px;*/
-/*    height:350px ;*/
-/*    color: #000000;*/
-/*    position: relative;*/
-/*    transform-style: preserve-3d;*/
-/*    perspective: 1000px;*/
-/*    backface-visibility: hidden;*/
-/*    transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);*/
-/*}*/
-
-/*.content-inner > * {*/
-/*    backface-visibility: hidden;*/
-/*    transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);*/
-/*}*/
-
-/*.content-inner:hover .content-front {*/
-/*    transform: rotateY(-180deg);*/
-/*}*/
-/*.content-inner:hover .content-back {*/
-/*    transform: rotateY(0deg);*/
-/*}*/
-/*.content-inner .content-front,*/
-/*.content-inner .content-back {*/
-/*    color: black;*/
-/*    position: relative;*/
-/*    transform-style: preserve-3d;*/
-/*    perspective: 1000px;*/
-/*    backface-visibility: hidden;*/
-/*    height: 100%;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
-/*.content-front {*/
-/*    background: linear-gradient(40deg, rgba(38, 219, 234, 0.3), rgba(255, 255, 255, 0.58));*/
-/*    position:relative;*/
-/*    cursor:pointer;*/
-/*}*/
-/*.content-front  .cf-inner:before {*/
-/*    top:27px;*/
-/*    left:10px;*/
-/*    border-left:1px dotted;*/
-/*    border-top:1px dotted;*/
-/*}*/
-/*.content-front .cf-inner:after {*/
-/*    bottom:27px;*/
-/*    right:10px;*/
-/*    border-right:1px  dotted;*/
-/*    border-bottom:1px dotted;*/
-/*}*/
-
-/*.content-front  .cf-inner:before , .content-front  .cf-inner:after {*/
-/*    content:'';*/
-/*    position:absolute;*/
-/*    width:50px;*/
-/*    height:50px;*/
-/*    border-color: rgb(0, 0, 0);*/
-/*    z-index:5;*/
-/*}*/
-
-/*.content-inner .content-back {*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    z-index: 0;*/
-/*    transform: rotateY(180deg);*/
-/*    background: linear-gradient(40deg, rgba(38, 219, 234, 0.3), rgba(255, 255, 255, 0.58));*/
-/*}*/
-
-/*.content-inner .cf-inner {*/
-/*    transform-style: preserve-3d;*/
-/*    backface-visibility: hidden;*/
-/*    width:100%;*/
-/*    padding:150px 30px;*/
-/*}*/
-/*.content-inner .cf-inner .inner {*/
-/*    align-items: stretch;*/
-/*    transform-style: preserve-3d;*/
-/*    perspective: 1000px;*/
-/*    backface-visibility: hidden;*/
-/*    transform: translateZ(95px) scale(0.81);*/
-/*    text-align: center;*/
-/*    position:relative;*/
-/*    z-index:2;*/
-/*}*/
-
-/*.content-back i {*/
-/*    font-size:54px;*/
-/*    position:relative;*/
-/*}*/
-/*.dec-icon {*/
-/*    position:relative;*/
-/*    display:inline-table;*/
-/*    width:80px;*/
-/*    height:80px;*/
-/*}*/
-/*.dec-icon:before , .dec-icon:after {*/
-/*    content:'';*/
-/*    position:absolute;*/
-/*    width:60px;*/
-/*    height:10px;*/
-/*    border-radius:1000px;*/
-/*    background: rgb(255, 255, 255);*/
-/*}*/
-/*.dec-icon:before {*/
-/*    left:-15px;*/
-/*    top:12px;*/
-/*}*/
-
-/*.dec-icon:after  {*/
-/*    right:-15px;*/
-/*    bottom:12px;*/
-/*}*/
-
-
-/*.dec-icon i {*/
-/*    z-index:1;*/
-/*}*/
-/*.content-back .dec-icon {*/
-/*    top:-20px;*/
-/*}*/
-
-/*.content-inner .cf-inner .inner p {*/
-/*    color: #000000;*/
-/*}*/
-/*.content-back:after  {*/
-/*    color: black;*/
-/*    position:absolute;*/
-/*    content: '\25CF\25CF\25CF';*/
-/*    width:50px;*/
-/*    left:50%;*/
-/*    bottom:30px;*/
-/*    margin-left:-25px;*/
-/*    font-size: 9px;*/
-/*    letter-spacing: 4px;*/
-/*}*/
-/*.serv-num {*/
-/*    position:absolute;*/
-/*    bottom:27px;*/
-/*    left:10px;*/
-/*    color: #000000;*/
-/*    font-family: 'Playfair Display', cursive;*/
-/*    z-index:3;*/
-/*    font-size:20px;*/
-/*}*/
-/*.content-inner .cf-inner .inner h2  {*/
-/*    position:relative;*/
-/*    font-size:22px;*/
-/*    font-weight:800;*/
-/*    padding-bottom:20px;*/
-/*    font-family: 'Playfair Display', cursive;*/
-/*}*/
-
-/*.content-inner .cf-inner .inner h2:after {*/
-/*    content:'';*/
-/*    position:absolute;*/
-/*    top:-30px;*/
-/*    margin-left:-25px;*/
-/*    left:50%;*/
-/*    width:50px;*/
-/*    height:2px;*/
-/*}*/
-/*.content-inner .content-front h4{*/
-/*    display:inline-block;*/
-/*    color: #000000;*/
-/*    text-transform:uppercase;*/
-/*    font-size:12px;*/
-/*    letter-spacing:2px;*/
-/*    margin:0 4px;*/
-/*}*/
-
-/*.col-md-1{*/
-/*    position:absolute;*/
-/*    top: 30vh;*/
-/*    left: 14vw;*/
-/*}*/
-
-/*.col-md-2{*/
-/*    position: absolute;*/
-/*    top: 30vh;*/
-/*    right: 50vh;*/
-/*    left: 86.3vh;*/
-/*}*/
-
-/*.col-md-3{*/
-/*    position: absolute;*/
-/*    top: 30vh;*/
-/*    right: 8vw;*/
-/*}*/
-
-/*.col-md-4{*/
-/*    position:absolute;*/
-/*    top: 93vh;*/
-/*    left: 14vw;*/
-/*}*/
-
-/*.col-md-5{*/
-/*    position: absolute;*/
-/*    top: 93vh;*/
-/*    right: 50vh;*/
-/*    left: 86.3vh;*/
-/*}*/
-
-/*.col-md-6{*/
-/*    position: absolute;*/
-/*    top: 93vh;*/
-/*    right: 8vw;*/
-/*}*/
-
-/*section:nth-child(6)>div:nth-child(8)>img:nth-child(1){*/
-/*    position: absolute;*/
-/*    height: 28vh;*/
-/*    width: 10.5vh;*/
-/*    top: 61vh;*/
-/*    left: 22vh;*/
-/*}*/
-
-/*section:nth-child(6)>div:nth-child(8)>img:nth-child(2){*/
-/*    position: absolute;*/
-/*    height: 34vh;*/
-/*    width: 16vh;*/
-/*    top: 128vh;*/
-/*    right: 1vw;*/
-/*}*/
 
 
 section:nth-child(6){
