--- a/css/styles.css
+++ b/css/styles.css
@@ -1627,10 +1627,30 @@ body footer section>div:nth-child(2)>div>img:nth-child(1){
     right: 68vh;
 }
 
+body footer section>div:nth-child(2)>div>img{
+    position: absolute;
+    right: 68vh;
+}
+
 body footer section>div:nth-child(2)>div>img:nth-child(2){
     position: absolute;
     top: 1037vh;
-    right: 68vh;
+
+}
+
+body footer section>div:nth-child(2)>div>img:nth-child(3){
+    position: absolute;
+    top: 1044vh;
+}
+
+body footer section>div:nth-child(2)>div>img:nth-child(4){
+    position: absolute;
+    top: 1051vh;
+}
+
+body footer section>div:nth-child(2)>div>img:nth-child(5){
+    position: absolute;
+    top: 1058vh;
 }
 
 
