--- a/css/styles.css
+++ b/css/styles.css
@@ -1688,6 +1688,15 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(4){
     left: 109vh;
 }
 
+body footer section>div:nth-child(2)>nav>ul>li:nth-child(5){
+    position: absolute;
+    color: #494949;
+    font-family: Inter;
+    font-size: 20px;
+    top: 1059vh;
+    left: 109vh;
+}
+
 
 
 
