--- a/css/styles.css
+++ b/css/styles.css
@@ -1658,7 +1658,7 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(1){
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1031vh;
+    top: 1038vh;
     left: 109vh;
 }
 
@@ -1667,7 +1667,7 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(2){
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1038vh;
+    top: 1045vh;
     left: 109vh;
 }
 
@@ -1676,7 +1676,7 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(3){
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1045vh;
+    top: 1052vh;
     left: 109vh;
 }
 
@@ -1685,7 +1685,7 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(4){
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1052vh;
+    top: 1059vh;
     left: 109vh;
 }
 
@@ -1694,7 +1694,7 @@ body footer section>div:nth-child(2)>nav>ul>li:nth-child(5){
     color: #494949;
     font-family: Inter;
     font-size: 20px;
-    top: 1059vh;
+    top: 1066vh;
     left: 109vh;
 }
 
@@ -1704,6 +1704,19 @@ body footer section>div:nth-child(2)>hr{
     height: 45vh;
     top: 1025vh;
     left: 147vh;
+}
+
+body footer section>div:nth-child(3)>h1{
+    color: #ffffff;
+    font-family: 'Catamaran';
+    font-size: 1.5em;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    position: absolute;
+    margin: auto;
+    left: 163vh;
+    top: 1030vh;
 }
 
 
