--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,7 +95,19 @@ body main section:first-child>div:nth-child(2)>img{
     width: 100%;
     height: 63vw;
 }
+body main section:first-child>div:nth-child(3)>img{
+    position: absolute;
+    top: 5vw;
+    right: 10vw;
+    border-bottom-right-radius: 12%;
+    width: 30%;
+}
 
+body main section:first-child>div:nth-child(4)>aside{
+    position: absolute;
+    top: 125px;
+    left: 13.5vw;
+}
 
 
 /*--------------------------------------features section-------------------------------------------------*/
